# fuwasdr

./: .gitmodules  Cargo.toml  README.md  memory.x
.cargo/: config.toml
board/: .gitignore  fp-lib-table  fuwasdr.kicad_pcb  fuwasdr.kicad_pro  fuwasdr.kicad_sch  sym-lib-table
board/Library.pretty/: RPi_Pico_SMD_TH_changed_smd.kicad_mod
fonts/: gen_font.py  gen_font_png.py
src/: board.rs  clockctl.rs  codec.rs  control.rs  i2c.rs  lib.rs  main.rs  pins.rs
src/core/: buf.rs  demod.rs  display.rs  dma.rs  main.rs  mod.rs  spectrum.rs  usb.rs
src/display/: lcd.rs  manager.rs  mod.rs  text.rs
src/dsp/: complex.rs  fft.rs  mod.rs  number.rs
src/sdr/: mod.rs  shift.rs
src/sdr/demod/: am.rs  fm.rs  mod.rs
src/util/: gcd.rs
