[package]
name = "fuwasdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = { git = "https://github.com/carbotaniuman/auto_ops", branch = "master" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-hal = { version = "^1.0.0" }
embedded-hal-bus = "0.1.0"
num = { version = "0.4.1", default-features = false }
panic-halt = "0.2.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.2", features = ["eh1_0_alpha", "critical-section-impl", "defmt"] }
usb-device = "0.2.9"
usbd-audio = "0.1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 0
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false
strip = "debuginfo"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false
strip = true
panic = 'abort'

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
